--- a/package.json
+++ b/package.json
@@ -2,7 +2,19 @@
   "name": "currency-pair-trading-sample",
   "version": "1.0.0",
   "main": "server.js",
+  "scripts": {
+    "dist": "webpack",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": "https://github.com/dougneves/currency-pair-trading-sample",
   "author": "Douglas Neves <dougneves@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^4.16.0",
+    "webpack-cli": "^3.0.8"
+  }
 }
