--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "server.js",
   "scripts": {
     "dist": "webpack",
+    "start": "webpack && node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "https://github.com/dougneves/currency-pair-trading-sample",
@@ -21,6 +22,7 @@
     "webpack-cli": "^3.0.8"
   },
   "dependencies": {
+    "express": "^4.16.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
