--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dist": "webpack",
     "start": "webpack && node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test.js --compilers js:babel-core/register"
   },
   "repository": "https://github.com/dougneves/currency-pair-trading-sample",
   "author": "Douglas Neves <dougneves@gmail.com>",
@@ -17,8 +17,12 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "chai": "^4.1.2",
     "css-loader": "^1.0.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "file-loader": "^1.1.11",
+    "mocha": "^5.2.0",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
